Z-Index Fix

--- a/src/main.css
+++ b/src/main.css
@@ -263,7 +263,10 @@ body {
     border: 8px solid #1f2937;
     transition: bottom 0.5s cubic-bezier(0.4, 0, 0.2, 1);
     cursor: url('../assets/cursors/ipadCursor.cur'), auto;
-    z-index: 50;
+}
+
+dialog {
+    z-index: 3;
 }
 
 .modal.show {
